# TallyAI

./: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  vercel.json
backend/: .env.example  alembic.ini  check_db.py  pip_install_pkg.txt  pip_out.txt  pyproject.toml  run_eval.py  run_nl_tests.bat  run_nl_tests2.bat  run_semantic_tests.bat  run_tests.bat  seed_prod_connection.py  tallyai.db
backend/alembic/: README  env.py
backend/alembic/versions/: 20250101_0000_0001_initial_schema.py
backend/metrics/: eval_golden_set.json  saas_metrics.yaml
backend/tallyai/: __init__.py  main.py
backend/tallyai/api/: __init__.py  connections.py  eval.py  metrics.py  runs.py  schema.py  stream.py
backend/tallyai/core/: __init__.py  orchestrator.py  safety.py  semantic_layer.py
backend/tallyai/db/: __init__.py  models.py  session.py
backend/tallyai/schemas/: __init__.py
backend/tallyai/services/: __init__.py  analytics.py  connection_manager.py  credential_store.py  eval_execution.py  eval_harness.py  execution_log.py  explainer.py  nl_translator.py  (+5 more)
backend/tests/: __init__.py  conftest.py  test_analytics.py  test_api_contract.py  test_connection_manager.py  test_credential_store.py  test_eval_execution.py  test_eval_harness.py  test_models.py  test_multitenant_isolation.py  test_nl_translator.py  test_orchestrator.py  test_orchestrator_tracing.py  test_query_executor.py  test_query_history.py  test_reasoning_layer.py  test_safety_properties.py  test_safety_unit.py  test_schema_introspector.py  test_semantic_layer.py  test_stream.py
(+39 files in other folders)
