[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tallyai"
version = "0.1.0"
description = "TallyAI — AI database consultant backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]==0.115.*",
    "uvicorn[standard]==0.34.*",
    "python-dotenv==1.0.*",
    "pydantic>=2,<3",
    "sqlalchemy==2.*",
    "alembic",
    "asyncpg",
    "cryptography",
    "aiosqlite",
    "sqlglot==23.*",
    "hypothesis",
    "pyyaml>=6.0",
    "langchain-openai>=0.1",
    "langchain-anthropic>=0.1",
    "langchain-google-genai>=2.0",
    "langchain-core>=0.2",
    "langgraph==1.*",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "duckdb>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tallyai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
